# cactus

./: Cargo.toml  Dioxus.toml
assets/: icon.rgba  style.css
docs/: README.md
src/: lib.rs  main.rs
src/app/: app.rs  chat.rs  context_menu.rs  log.rs  mod.rs  settings.rs  side_panel.rs
src/commands/: commands.rs
src/connection/: chats.rs  connection.rs  connection_manager.rs  connection_map.rs  message.rs  mod.rs
