[package]
name = "cactus"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.6", features = ["serde"] }
chrono = "0.4.41"
dioxus = { version = "0.6.3", features = ["desktop"] }
serde = { version = "1.0.219", features = ["derive"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
